force-app/main/default/objects/MS_Team_Notification__c/MS_Team_Notification__c.object-meta.xml
<CustomObject>
    <description>Junction object between Case and Notification detail used to send notification.</description>
    <label>MS Team Notification</label>
    <nameField>
        <displayFormat>MSTN-{00000}</displayFormat>
        <label>MS Team Notification Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MS Team Notifications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>