force-app/main/default/objects/MS_Team_Notification__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <description>This is a lookup to a case record</description>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>MS Team Notifications</relationshipLabel>
    <relationshipName>MS_Team_Notifications</relationshipName>
    <type>Lookup</type>
</CustomField>