force-app/main/default/objects/MS_Team_Notification__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <description>Flag to determine active MS Team Notification</description>
    <defaultValue>true</defaultValue>
    <label>IsActive</label>
    <type>Checkbox</type>
</CustomField>