force-app/main/default/objects/MS_Team_Notification__c/fields/Last_NotificationTime__c.field-meta.xml
<CustomField>
    <fullName>Last_NotificationTime__c</fullName>
    <description>This is to capture last notification datetime</description>
    <label>Last NotificationTime</label>
    <type>DateTime</type>
</CustomField>