force-app/main/default/objects/MS_Team_Notification__c/fields/Notification_Detail__c.field-meta.xml
<CustomField>
    <fullName>Notification_Detail__c</fullName>
    <description>This is to determine notification detail</description>
    <label>Notification Detail</label>
    <referenceTo>Notification_Detail__c</referenceTo>
    <relationshipLabel>MS Team Notifications</relationshipLabel>
    <relationshipName>MS_Team_Notifications</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>