force-app/main/default/objects/MS_Team_Notification__c/fields/Notification_Eligible__c.field-meta.xml
<CustomField>
    <fullName>Notification_Eligible__c</fullName>
    <description>This formula field is to determine the eligibility of notification</description>
    <formula>IF(
   Notification_Detail__r.Is_Instant_Notification__c,
   false,
   ( NOW()-Case__r.CreatedDate)*24 &gt;  Notification_Detail__r.Trigger_Notification_After_in_HRS__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Notification Eligible</label>
    <type>Checkbox</type>
</CustomField>