force-app/main/default/objects/MS_Team_Notification__c/fields/Re_Trigger_Count__c.field-meta.xml
<CustomField>
    <fullName>Re_Trigger_Count__c</fullName>
    <description>Field to capture the trigger count of notification</description>
    <defaultValue>0</defaultValue>
    <label>Re-Trigger Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>