force-app/main/default/objects/MS_Team_Notification__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Case__c</columns>
    <columns>Notification_Detail__c</columns>
    <columns>IsActive__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Notification_Eligible__c</columns>
    <columns>Last_NotificationTime__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>